[package]
name = "bkm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.27", features = ["derive"] }
crossterm = "0.25.0"
dirs = "4.0.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
tui = "0.19.0"
unicode-width = "0.1.10"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
